# Advent-of-Code

./: CMakeLists.txt  main.cpp
2024/include/2024/: day-01.h  day-02.h  day-03.h  day-04.h  day-05.h
2024/src/: day-01.cpp  day-02.cpp  day-03.cpp  day-04.cpp  day-05.cpp
base/: base.cpp  base.h  common.h
templ/: templates.h
